--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,7 @@ RewriteRule ^sorteo/([0-9]*)-(.*)$								/sorteo.php?id=$1&url=$2
 RewriteRule ^edicion_anterior$									/ed_anterior.php
 RewriteRule ^english_edition$									/ed_anterior_en.php
 RewriteRule ^francais_edition$									/ed_anterior_fr.php
+RewriteRule ^edizione_italiana$									/ed_anterior_it.php
 RewriteRule ^editorial$											/columnista.php
 RewriteRule ^editorial/([0-9]*)-(.*)$							/columna.php?idcolumna=$1&urlcolumna=$2
 RewriteRule ^login$	 											/login.php
